{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 12,
  "lineage": "dee94761-6413-7ada-4103-eb914845b6e9",
  "resources": [
    {
      "module": "module.raidcloudweb",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b748249d064044e8",
            "arn": "arn:aws:ec2:ap-southeast-1:034362076143:instance/i-0c1596ae74193892f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1596ae74193892f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "raidcloudweb",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eba71957db49950e",
            "private_dns": "ip-172-31-17-218.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.218",
            "public_dns": "ec2-13-213-46-0.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.46.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-091f645a47e691669",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "raidcloudweb01_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a897641c62aa248d",
            "tags": {
              "Name": "raidcloudweb01"
            },
            "tags_all": {
              "Name": "raidcloudweb01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007f87a144da2fea5"
            ]
          },
          "dependencies": [
            "module.raidcloudweb.aws_security_group.dynamic_sg"
          ]
        }
      ]
    },
    {
      "module": "module.raidcloudweb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dynamic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:034362076143:security-group/sg-007f87a144da2fea5",
            "description": "Security group with dynamic rules based on CSV",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007f87a144da2fea5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "220.255.137.67/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "raidcloudweb01_sg",
            "name_prefix": "",
            "owner_id": "034362076143",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "raidcloudweb01_sg"
            },
            "tags_all": {
              "Name": "raidcloudweb01_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a66f3cf4273fe38c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sonarqube",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b748249d064044e8",
            "arn": "arn:aws:ec2:ap-southeast-1:034362076143:instance/i-0171ce383e11cdf1e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0171ce383e11cdf1e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "raidcloudweb",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088f405eec449f51f",
            "private_dns": "ip-172-31-23-169.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.169",
            "public_dns": "ec2-13-250-108-98.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.108.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0911a3e7d49da9373",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sonarqube_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a897641c62aa248d",
            "tags": {
              "Name": "sonarqube"
            },
            "tags_all": {
              "Name": "sonarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c31247a12596084"
            ]
          },
          "dependencies": [
            "module.sonarqube.aws_security_group.dynamic_sg"
          ]
        }
      ]
    },
    {
      "module": "module.sonarqube",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dynamic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:034362076143:security-group/sg-00c31247a12596084",
            "description": "Security group with dynamic rules based on CSV",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c31247a12596084",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "220.255.137.67/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sonarqube_sg",
            "name_prefix": "",
            "owner_id": "034362076143",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_sg"
            },
            "tags_all": {
              "Name": "sonarqube_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a66f3cf4273fe38c"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}